fix: support idempotency in query requests
